@@ -14,8 +14,9 @@
  * Fixed: `Test-PathIsJunction` returns multiple results if the `Path` parameter contains wildcards and matches multiple items.
  * Fixed: `Install-Junction` can't install a junction whose path contains wildcard characters (fixes [issue #190](https://bitbucket.org/splatteredbits/carbon/issues/190/install-junction-fails-when-the-path)).
  * Fixed: `New-Junction` writes wrong error when creating an existing junction whose path contains wildcard characters.
-
+ * Fixed: `Install-Service` doesn't update/change an existing service's account when using the `Credential` parameter (fixes [issue #185](https://bitbucket.org/splatteredbits/carbon/issues/185/install-service-never-updates-logon-as-if)).
  
+
 # 2.1.1 (25 February 2016)
 
 ## Bug Fixes
